comp/compiler.output
Terminaux inutilisés dans la grammaire

   tCONST
   tFLOAT
   tCONSTANTE


Grammaire

    0 $accept: S $end

    1 S: tINT tMAIN tPARENTHESEOUVRANTE Args tPARENTHESEFERMANTE tACCOLADEOUVRANTE Body tACCOLADEFERMANTE

    2 Type: tINT
    3     | tSTRING
    4     | tVOID

    5 Args: %empty
    6     | Arg ArgSuite

    7 Arg: Type tVARIABLE

    8 ArgSuite: tVIRGULE Arg ArgSuite
    9         | %empty

   10 Body: Ligne Body
   11     | %empty

   12 Ligne: Affectation tPOINTVIRGULE

   13 Affectation: tVARIABLE tEGAL Terme
   14            | tVARIABLE tEGAL tCHAINE

   15 Terme: tVARIABLE
   16      | tNOMBRE
   17      | Expression

   18 Expression: tPARENTHESEOUVRANTE Expression tPARENTHESEFERMANTE
   19           | Terme tADD Terme
   20           | Terme tSUB Terme
   21           | Terme tMUL Terme
   22           | Terme tDIV Terme

   23 $@1: %empty

   24 Ligne: Declaration $@1 tPOINTVIRGULE

   25 $@2: %empty

   26 Declaration: Type tVARIABLE $@2 DeclarationSuite

   27 $@3: %empty

   28 Declaration: tVARIABLE $@3 DeclarationSuite

   29 DeclarationSuite: tVIRGULE Declaration
   30                 | %empty

   31 Ligne: tPRINTF tPARENTHESEOUVRANTE tCHAINE tPARENTHESEFERMANTE tPOINTVIRGULE
   32      | tPRINTF tPARENTHESEOUVRANTE tVARIABLE tPARENTHESEFERMANTE tPOINTVIRGULE

   33 $@4: %empty

   34 Ligne: tIF tPARENTHESEOUVRANTE Conditions tPARENTHESEFERMANTE tACCOLADEOUVRANTE Body tACCOLADEFERMANTE $@4 tELSE tACCOLADEOUVRANTE Body tACCOLADEFERMANTE
   35      | tIF tPARENTHESEOUVRANTE Conditions tPARENTHESEFERMANTE tACCOLADEOUVRANTE Body tACCOLADEFERMANTE

   36 $@5: %empty

   37 Ligne: tWHILE tPARENTHESEOUVRANTE $@5 Conditions tPARENTHESEFERMANTE tACCOLADEOUVRANTE Body tACCOLADEFERMANTE

   38 Conditions: Condition suiteConditions

   39 Condition: tPARENTHESEOUVRANTE Condition tPARENTHESEFERMANTE
   40          | Terme tINFEGAL Terme
   41          | Terme tSUPEGAL Terme
   42          | Terme tINF Terme
   43          | Terme tSUP Terme
   44          | Terme tEGALEGAL Terme
   45          | Terme tDIFFERENT Terme

   46 $@6: %empty

   47 suiteConditions: tOU Condition $@6 suiteConditions

   48 $@7: %empty

   49 suiteConditions: tET Condition $@7 suiteConditions
   50                | %empty


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tVOID (258) 4
tMAIN (259) 1
tIF (260) 34 35
tELSE (261) 34
tPRINTF (262) 31 32
tCONST (263)
tINT (264) 1 2
tFLOAT (265)
tSTRING (266) 3
tACCOLADEOUVRANTE (267) 1 34 35 37
tACCOLADEFERMANTE (268) 1 34 35 37
tPARENTHESEOUVRANTE (269) 1 18 31 32 34 35 37 39
tPARENTHESEFERMANTE (270) 1 18 31 32 34 35 37 39
tVIRGULE (271) 8 29
tCONSTANTE (272)
tVARIABLE (273) 7 13 14 15 26 28 32
tEGAL (274) 13 14
tPOINTVIRGULE (275) 12 24 31 32
tNOMBRE (276) 16
tADD (277) 19
tSUB (278) 20
tMUL (279) 21
tDIV (280) 22
tCHAINE (281) 14 31
tINFEGAL (282) 40
tSUPEGAL (283) 41
tINF (284) 42
tSUP (285) 43
tEGALEGAL (286) 44
tDIFFERENT (287) 45
tOU (288) 47
tET (289) 49
tWHILE (290) 37


Non-terminaux, suivis des règles où ils apparaissent

$accept (36)
    à gauche: 0
S (37)
    à gauche: 1, à droite: 0
Type (38)
    à gauche: 2 3 4, à droite: 7 26
Args (39)
    à gauche: 5 6, à droite: 1
Arg (40)
    à gauche: 7, à droite: 6 8
ArgSuite (41)
    à gauche: 8 9, à droite: 6 8
Body (42)
    à gauche: 10 11, à droite: 1 10 34 35 37
Ligne (43)
    à gauche: 12 24 31 32 34 35 37, à droite: 10
Affectation (44)
    à gauche: 13 14, à droite: 12
Terme (45)
    à gauche: 15 16 17, à droite: 13 19 20 21 22 40 41 42 43 44 45
Expression (46)
    à gauche: 18 19 20 21 22, à droite: 17 18
$@1 (47)
    à gauche: 23, à droite: 24
Declaration (48)
    à gauche: 26 28, à droite: 24 29
$@2 (49)
    à gauche: 25, à droite: 26
$@3 (50)
    à gauche: 27, à droite: 28
DeclarationSuite (51)
    à gauche: 29 30, à droite: 26 28
$@4 (52)
    à gauche: 33, à droite: 34
$@5 (53)
    à gauche: 36, à droite: 37
Conditions (54)
    à gauche: 38, à droite: 34 35 37
Condition (55)
    à gauche: 39 40 41 42 43 44 45, à droite: 38 39 47 49
suiteConditions (56)
    à gauche: 47 49 50, à droite: 38 47 49
$@6 (57)
    à gauche: 46, à droite: 47
$@7 (58)
    à gauche: 48, à droite: 49


État 0

    0 $accept: . S $end

    tINT  décalage et aller à l'état 1

    S  aller à l'état 2


État 1

    1 S: tINT . tMAIN tPARENTHESEOUVRANTE Args tPARENTHESEFERMANTE tACCOLADEOUVRANTE Body tACCOLADEFERMANTE

    tMAIN  décalage et aller à l'état 3


État 2

    0 $accept: S . $end

    $end  décalage et aller à l'état 4


État 3

    1 S: tINT tMAIN . tPARENTHESEOUVRANTE Args tPARENTHESEFERMANTE tACCOLADEOUVRANTE Body tACCOLADEFERMANTE

    tPARENTHESEOUVRANTE  décalage et aller à l'état 5


État 4

    0 $accept: S $end .

    $défaut  accepter


État 5

    1 S: tINT tMAIN tPARENTHESEOUVRANTE . Args tPARENTHESEFERMANTE tACCOLADEOUVRANTE Body tACCOLADEFERMANTE

    tVOID    décalage et aller à l'état 6
    tINT     décalage et aller à l'état 7
    tSTRING  décalage et aller à l'état 8

    $défaut  réduction par utilisation de la règle 5 (Args)

    Type  aller à l'état 9
    Args  aller à l'état 10
    Arg   aller à l'état 11


État 6

    4 Type: tVOID .

    $défaut  réduction par utilisation de la règle 4 (Type)


État 7

    2 Type: tINT .

    $défaut  réduction par utilisation de la règle 2 (Type)


État 8

    3 Type: tSTRING .

    $défaut  réduction par utilisation de la règle 3 (Type)


État 9

    7 Arg: Type . tVARIABLE

    tVARIABLE  décalage et aller à l'état 12


État 10

    1 S: tINT tMAIN tPARENTHESEOUVRANTE Args . tPARENTHESEFERMANTE tACCOLADEOUVRANTE Body tACCOLADEFERMANTE

    tPARENTHESEFERMANTE  décalage et aller à l'état 13


État 11

    6 Args: Arg . ArgSuite

    tVIRGULE  décalage et aller à l'état 14

    $défaut  réduction par utilisation de la règle 9 (ArgSuite)

    ArgSuite  aller à l'état 15


État 12

    7 Arg: Type tVARIABLE .

    $défaut  réduction par utilisation de la règle 7 (Arg)


État 13

    1 S: tINT tMAIN tPARENTHESEOUVRANTE Args tPARENTHESEFERMANTE . tACCOLADEOUVRANTE Body tACCOLADEFERMANTE

    tACCOLADEOUVRANTE  décalage et aller à l'état 16


État 14

    8 ArgSuite: tVIRGULE . Arg ArgSuite

    tVOID    décalage et aller à l'état 6
    tINT     décalage et aller à l'état 7
    tSTRING  décalage et aller à l'état 8

    Type  aller à l'état 9
    Arg   aller à l'état 17


État 15

    6 Args: Arg ArgSuite .

    $défaut  réduction par utilisation de la règle 6 (Args)


État 16

    1 S: tINT tMAIN tPARENTHESEOUVRANTE Args tPARENTHESEFERMANTE tACCOLADEOUVRANTE . Body tACCOLADEFERMANTE

    tVOID      décalage et aller à l'état 6
    tIF        décalage et aller à l'état 18
    tPRINTF    décalage et aller à l'état 19
    tINT       décalage et aller à l'état 7
    tSTRING    décalage et aller à l'état 8
    tVARIABLE  décalage et aller à l'état 20
    tWHILE     décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 11 (Body)

    Type         aller à l'état 22
    Body         aller à l'état 23
    Ligne        aller à l'état 24
    Affectation  aller à l'état 25
    Declaration  aller à l'état 26


État 17

    8 ArgSuite: tVIRGULE Arg . ArgSuite

    tVIRGULE  décalage et aller à l'état 14

    $défaut  réduction par utilisation de la règle 9 (ArgSuite)

    ArgSuite  aller à l'état 27


État 18

   34 Ligne: tIF . tPARENTHESEOUVRANTE Conditions tPARENTHESEFERMANTE tACCOLADEOUVRANTE Body tACCOLADEFERMANTE $@4 tELSE tACCOLADEOUVRANTE Body tACCOLADEFERMANTE
   35      | tIF . tPARENTHESEOUVRANTE Conditions tPARENTHESEFERMANTE tACCOLADEOUVRANTE Body tACCOLADEFERMANTE

    tPARENTHESEOUVRANTE  décalage et aller à l'état 28


État 19

   31 Ligne: tPRINTF . tPARENTHESEOUVRANTE tCHAINE tPARENTHESEFERMANTE tPOINTVIRGULE
   32      | tPRINTF . tPARENTHESEOUVRANTE tVARIABLE tPARENTHESEFERMANTE tPOINTVIRGULE

    tPARENTHESEOUVRANTE  décalage et aller à l'état 29


État 20

   13 Affectation: tVARIABLE . tEGAL Terme
   14            | tVARIABLE . tEGAL tCHAINE
   28 Declaration: tVARIABLE . $@3 DeclarationSuite

    tEGAL  décalage et aller à l'état 30

    $défaut  réduction par utilisation de la règle 27 ($@3)

    $@3  aller à l'état 31


État 21

   37 Ligne: tWHILE . tPARENTHESEOUVRANTE $@5 Conditions tPARENTHESEFERMANTE tACCOLADEOUVRANTE Body tACCOLADEFERMANTE

    tPARENTHESEOUVRANTE  décalage et aller à l'état 32


État 22

   26 Declaration: Type . tVARIABLE $@2 DeclarationSuite

    tVARIABLE  décalage et aller à l'état 33


État 23

    1 S: tINT tMAIN tPARENTHESEOUVRANTE Args tPARENTHESEFERMANTE tACCOLADEOUVRANTE Body . tACCOLADEFERMANTE

    tACCOLADEFERMANTE  décalage et aller à l'état 34


État 24

   10 Body: Ligne . Body

    tVOID      décalage et aller à l'état 6
    tIF        décalage et aller à l'état 18
    tPRINTF    décalage et aller à l'état 19
    tINT       décalage et aller à l'état 7
    tSTRING    décalage et aller à l'état 8
    tVARIABLE  décalage et aller à l'état 20
    tWHILE     décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 11 (Body)

    Type         aller à l'état 22
    Body         aller à l'état 35
    Ligne        aller à l'état 24
    Affectation  aller à l'état 25
    Declaration  aller à l'état 26


État 25

   12 Ligne: Affectation . tPOINTVIRGULE

    tPOINTVIRGULE  décalage et aller à l'état 36


État 26

   24 Ligne: Declaration . $@1 tPOINTVIRGULE

    $défaut  réduction par utilisation de la règle 23 ($@1)

    $@1  aller à l'état 37


État 27

    8 ArgSuite: tVIRGULE Arg ArgSuite .

    $défaut  réduction par utilisation de la règle 8 (ArgSuite)


État 28

   34 Ligne: tIF tPARENTHESEOUVRANTE . Conditions tPARENTHESEFERMANTE tACCOLADEOUVRANTE Body tACCOLADEFERMANTE $@4 tELSE tACCOLADEOUVRANTE Body tACCOLADEFERMANTE
   35      | tIF tPARENTHESEOUVRANTE . Conditions tPARENTHESEFERMANTE tACCOLADEOUVRANTE Body tACCOLADEFERMANTE

    tPARENTHESEOUVRANTE  décalage et aller à l'état 38
    tVARIABLE            décalage et aller à l'état 39
    tNOMBRE              décalage et aller à l'état 40

    Terme       aller à l'état 41
    Expression  aller à l'état 42
    Conditions  aller à l'état 43
    Condition   aller à l'état 44


État 29

   31 Ligne: tPRINTF tPARENTHESEOUVRANTE . tCHAINE tPARENTHESEFERMANTE tPOINTVIRGULE
   32      | tPRINTF tPARENTHESEOUVRANTE . tVARIABLE tPARENTHESEFERMANTE tPOINTVIRGULE

    tVARIABLE  décalage et aller à l'état 45
    tCHAINE    décalage et aller à l'état 46


État 30

   13 Affectation: tVARIABLE tEGAL . Terme
   14            | tVARIABLE tEGAL . tCHAINE

    tPARENTHESEOUVRANTE  décalage et aller à l'état 47
    tVARIABLE            décalage et aller à l'état 39
    tNOMBRE              décalage et aller à l'état 40
    tCHAINE              décalage et aller à l'état 48

    Terme       aller à l'état 49
    Expression  aller à l'état 42


État 31

   28 Declaration: tVARIABLE $@3 . DeclarationSuite

    tVIRGULE  décalage et aller à l'état 50

    $défaut  réduction par utilisation de la règle 30 (DeclarationSuite)

    DeclarationSuite  aller à l'état 51


État 32

   37 Ligne: tWHILE tPARENTHESEOUVRANTE . $@5 Conditions tPARENTHESEFERMANTE tACCOLADEOUVRANTE Body tACCOLADEFERMANTE

    $défaut  réduction par utilisation de la règle 36 ($@5)

    $@5  aller à l'état 52


État 33

   26 Declaration: Type tVARIABLE . $@2 DeclarationSuite

    $défaut  réduction par utilisation de la règle 25 ($@2)

    $@2  aller à l'état 53


État 34

    1 S: tINT tMAIN tPARENTHESEOUVRANTE Args tPARENTHESEFERMANTE tACCOLADEOUVRANTE Body tACCOLADEFERMANTE .

    $défaut  réduction par utilisation de la règle 1 (S)


État 35

   10 Body: Ligne Body .

    $défaut  réduction par utilisation de la règle 10 (Body)


État 36

   12 Ligne: Affectation tPOINTVIRGULE .

    $défaut  réduction par utilisation de la règle 12 (Ligne)


État 37

   24 Ligne: Declaration $@1 . tPOINTVIRGULE

    tPOINTVIRGULE  décalage et aller à l'état 54


État 38

   18 Expression: tPARENTHESEOUVRANTE . Expression tPARENTHESEFERMANTE
   39 Condition: tPARENTHESEOUVRANTE . Condition tPARENTHESEFERMANTE

    tPARENTHESEOUVRANTE  décalage et aller à l'état 38
    tVARIABLE            décalage et aller à l'état 39
    tNOMBRE              décalage et aller à l'état 40

    Terme       aller à l'état 41
    Expression  aller à l'état 55
    Condition   aller à l'état 56


État 39

   15 Terme: tVARIABLE .

    $défaut  réduction par utilisation de la règle 15 (Terme)


État 40

   16 Terme: tNOMBRE .

    $défaut  réduction par utilisation de la règle 16 (Terme)


État 41

   19 Expression: Terme . tADD Terme
   20           | Terme . tSUB Terme
   21           | Terme . tMUL Terme
   22           | Terme . tDIV Terme
   40 Condition: Terme . tINFEGAL Terme
   41          | Terme . tSUPEGAL Terme
   42          | Terme . tINF Terme
   43          | Terme . tSUP Terme
   44          | Terme . tEGALEGAL Terme
   45          | Terme . tDIFFERENT Terme

    tADD        décalage et aller à l'état 57
    tSUB        décalage et aller à l'état 58
    tMUL        décalage et aller à l'état 59
    tDIV        décalage et aller à l'état 60
    tINFEGAL    décalage et aller à l'état 61
    tSUPEGAL    décalage et aller à l'état 62
    tINF        décalage et aller à l'état 63
    tSUP        décalage et aller à l'état 64
    tEGALEGAL   décalage et aller à l'état 65
    tDIFFERENT  décalage et aller à l'état 66


État 42

   17 Terme: Expression .

    $défaut  réduction par utilisation de la règle 17 (Terme)


État 43

   34 Ligne: tIF tPARENTHESEOUVRANTE Conditions . tPARENTHESEFERMANTE tACCOLADEOUVRANTE Body tACCOLADEFERMANTE $@4 tELSE tACCOLADEOUVRANTE Body tACCOLADEFERMANTE
   35      | tIF tPARENTHESEOUVRANTE Conditions . tPARENTHESEFERMANTE tACCOLADEOUVRANTE Body tACCOLADEFERMANTE

    tPARENTHESEFERMANTE  décalage et aller à l'état 67


État 44

   38 Conditions: Condition . suiteConditions

    tOU  décalage et aller à l'état 68
    tET  décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 50 (suiteConditions)

    suiteConditions  aller à l'état 70


État 45

   32 Ligne: tPRINTF tPARENTHESEOUVRANTE tVARIABLE . tPARENTHESEFERMANTE tPOINTVIRGULE

    tPARENTHESEFERMANTE  décalage et aller à l'état 71


État 46

   31 Ligne: tPRINTF tPARENTHESEOUVRANTE tCHAINE . tPARENTHESEFERMANTE tPOINTVIRGULE

    tPARENTHESEFERMANTE  décalage et aller à l'état 72


État 47

   18 Expression: tPARENTHESEOUVRANTE . Expression tPARENTHESEFERMANTE

    tPARENTHESEOUVRANTE  décalage et aller à l'état 47
    tVARIABLE            décalage et aller à l'état 39
    tNOMBRE              décalage et aller à l'état 40

    Terme       aller à l'état 73
    Expression  aller à l'état 55


État 48

   14 Affectation: tVARIABLE tEGAL tCHAINE .

    $défaut  réduction par utilisation de la règle 14 (Affectation)


État 49

   13 Affectation: tVARIABLE tEGAL Terme .
   19 Expression: Terme . tADD Terme
   20           | Terme . tSUB Terme
   21           | Terme . tMUL Terme
   22           | Terme . tDIV Terme

    tADD  décalage et aller à l'état 57
    tSUB  décalage et aller à l'état 58
    tMUL  décalage et aller à l'état 59
    tDIV  décalage et aller à l'état 60

    $défaut  réduction par utilisation de la règle 13 (Affectation)


État 50

   29 DeclarationSuite: tVIRGULE . Declaration

    tVOID      décalage et aller à l'état 6
    tINT       décalage et aller à l'état 7
    tSTRING    décalage et aller à l'état 8
    tVARIABLE  décalage et aller à l'état 74

    Type         aller à l'état 22
    Declaration  aller à l'état 75


État 51

   28 Declaration: tVARIABLE $@3 DeclarationSuite .

    $défaut  réduction par utilisation de la règle 28 (Declaration)


État 52

   37 Ligne: tWHILE tPARENTHESEOUVRANTE $@5 . Conditions tPARENTHESEFERMANTE tACCOLADEOUVRANTE Body tACCOLADEFERMANTE

    tPARENTHESEOUVRANTE  décalage et aller à l'état 38
    tVARIABLE            décalage et aller à l'état 39
    tNOMBRE              décalage et aller à l'état 40

    Terme       aller à l'état 41
    Expression  aller à l'état 42
    Conditions  aller à l'état 76
    Condition   aller à l'état 44


État 53

   26 Declaration: Type tVARIABLE $@2 . DeclarationSuite

    tVIRGULE  décalage et aller à l'état 50

    $défaut  réduction par utilisation de la règle 30 (DeclarationSuite)

    DeclarationSuite  aller à l'état 77


État 54

   24 Ligne: Declaration $@1 tPOINTVIRGULE .

    $défaut  réduction par utilisation de la règle 24 (Ligne)


État 55

   17 Terme: Expression .
   18 Expression: tPARENTHESEOUVRANTE Expression . tPARENTHESEFERMANTE

    tPARENTHESEFERMANTE  décalage et aller à l'état 78

    $défaut  réduction par utilisation de la règle 17 (Terme)


État 56

   39 Condition: tPARENTHESEOUVRANTE Condition . tPARENTHESEFERMANTE

    tPARENTHESEFERMANTE  décalage et aller à l'état 79


État 57

   19 Expression: Terme tADD . Terme

    tPARENTHESEOUVRANTE  décalage et aller à l'état 47
    tVARIABLE            décalage et aller à l'état 39
    tNOMBRE              décalage et aller à l'état 40

    Terme       aller à l'état 80
    Expression  aller à l'état 42


État 58

   20 Expression: Terme tSUB . Terme

    tPARENTHESEOUVRANTE  décalage et aller à l'état 47
    tVARIABLE            décalage et aller à l'état 39
    tNOMBRE              décalage et aller à l'état 40

    Terme       aller à l'état 81
    Expression  aller à l'état 42


État 59

   21 Expression: Terme tMUL . Terme

    tPARENTHESEOUVRANTE  décalage et aller à l'état 47
    tVARIABLE            décalage et aller à l'état 39
    tNOMBRE              décalage et aller à l'état 40

    Terme       aller à l'état 82
    Expression  aller à l'état 42


État 60

   22 Expression: Terme tDIV . Terme

    tPARENTHESEOUVRANTE  décalage et aller à l'état 47
    tVARIABLE            décalage et aller à l'état 39
    tNOMBRE              décalage et aller à l'état 40

    Terme       aller à l'état 83
    Expression  aller à l'état 42


État 61

   40 Condition: Terme tINFEGAL . Terme

    tPARENTHESEOUVRANTE  décalage et aller à l'état 47
    tVARIABLE            décalage et aller à l'état 39
    tNOMBRE              décalage et aller à l'état 40

    Terme       aller à l'état 84
    Expression  aller à l'état 42


État 62

   41 Condition: Terme tSUPEGAL . Terme

    tPARENTHESEOUVRANTE  décalage et aller à l'état 47
    tVARIABLE            décalage et aller à l'état 39
    tNOMBRE              décalage et aller à l'état 40

    Terme       aller à l'état 85
    Expression  aller à l'état 42


État 63

   42 Condition: Terme tINF . Terme

    tPARENTHESEOUVRANTE  décalage et aller à l'état 47
    tVARIABLE            décalage et aller à l'état 39
    tNOMBRE              décalage et aller à l'état 40

    Terme       aller à l'état 86
    Expression  aller à l'état 42


État 64

   43 Condition: Terme tSUP . Terme

    tPARENTHESEOUVRANTE  décalage et aller à l'état 47
    tVARIABLE            décalage et aller à l'état 39
    tNOMBRE              décalage et aller à l'état 40

    Terme       aller à l'état 87
    Expression  aller à l'état 42


État 65

   44 Condition: Terme tEGALEGAL . Terme

    tPARENTHESEOUVRANTE  décalage et aller à l'état 47
    tVARIABLE            décalage et aller à l'état 39
    tNOMBRE              décalage et aller à l'état 40

    Terme       aller à l'état 88
    Expression  aller à l'état 42


État 66

   45 Condition: Terme tDIFFERENT . Terme

    tPARENTHESEOUVRANTE  décalage et aller à l'état 47
    tVARIABLE            décalage et aller à l'état 39
    tNOMBRE              décalage et aller à l'état 40

    Terme       aller à l'état 89
    Expression  aller à l'état 42


État 67

   34 Ligne: tIF tPARENTHESEOUVRANTE Conditions tPARENTHESEFERMANTE . tACCOLADEOUVRANTE Body tACCOLADEFERMANTE $@4 tELSE tACCOLADEOUVRANTE Body tACCOLADEFERMANTE
   35      | tIF tPARENTHESEOUVRANTE Conditions tPARENTHESEFERMANTE . tACCOLADEOUVRANTE Body tACCOLADEFERMANTE

    tACCOLADEOUVRANTE  décalage et aller à l'état 90


État 68

   47 suiteConditions: tOU . Condition $@6 suiteConditions

    tPARENTHESEOUVRANTE  décalage et aller à l'état 38
    tVARIABLE            décalage et aller à l'état 39
    tNOMBRE              décalage et aller à l'état 40

    Terme       aller à l'état 41
    Expression  aller à l'état 42
    Condition   aller à l'état 91


État 69

   49 suiteConditions: tET . Condition $@7 suiteConditions

    tPARENTHESEOUVRANTE  décalage et aller à l'état 38
    tVARIABLE            décalage et aller à l'état 39
    tNOMBRE              décalage et aller à l'état 40

    Terme       aller à l'état 41
    Expression  aller à l'état 42
    Condition   aller à l'état 92


État 70

   38 Conditions: Condition suiteConditions .

    $défaut  réduction par utilisation de la règle 38 (Conditions)


État 71

   32 Ligne: tPRINTF tPARENTHESEOUVRANTE tVARIABLE tPARENTHESEFERMANTE . tPOINTVIRGULE

    tPOINTVIRGULE  décalage et aller à l'état 93


État 72

   31 Ligne: tPRINTF tPARENTHESEOUVRANTE tCHAINE tPARENTHESEFERMANTE . tPOINTVIRGULE

    tPOINTVIRGULE  décalage et aller à l'état 94


État 73

   19 Expression: Terme . tADD Terme
   20           | Terme . tSUB Terme
   21           | Terme . tMUL Terme
   22           | Terme . tDIV Terme

    tADD  décalage et aller à l'état 57
    tSUB  décalage et aller à l'état 58
    tMUL  décalage et aller à l'état 59
    tDIV  décalage et aller à l'état 60


État 74

   28 Declaration: tVARIABLE . $@3 DeclarationSuite

    $défaut  réduction par utilisation de la règle 27 ($@3)

    $@3  aller à l'état 31


État 75

   29 DeclarationSuite: tVIRGULE Declaration .

    $défaut  réduction par utilisation de la règle 29 (DeclarationSuite)


État 76

   37 Ligne: tWHILE tPARENTHESEOUVRANTE $@5 Conditions . tPARENTHESEFERMANTE tACCOLADEOUVRANTE Body tACCOLADEFERMANTE

    tPARENTHESEFERMANTE  décalage et aller à l'état 95


État 77

   26 Declaration: Type tVARIABLE $@2 DeclarationSuite .

    $défaut  réduction par utilisation de la règle 26 (Declaration)


État 78

   18 Expression: tPARENTHESEOUVRANTE Expression tPARENTHESEFERMANTE .

    $défaut  réduction par utilisation de la règle 18 (Expression)


État 79

   39 Condition: tPARENTHESEOUVRANTE Condition tPARENTHESEFERMANTE .

    $défaut  réduction par utilisation de la règle 39 (Condition)


État 80
